# babar

./: .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  Cargo.toml  MILESTONES.md  PLAN.md  README.md  RELEASE.md  TESTING.md  book.toml  deny.toml
.design/: README.md  SITE-COPY.md  (+1 more)
benches/pool-throughput/: Cargo.toml
benches/pool-throughput/benches/: pool_throughput.rs
benches/prepared-throughput/: Cargo.toml
benches/prepared-throughput/benches/: prepared_throughput.rs
benches/prepared-throughput/src/: lib.rs
crates/core/: Cargo.toml
crates/core/examples/: axum_service.rs  copy_bulk.rs  derive_codec.rs  m0_smoke.rs  migration_cli.rs  playground.rs  playground.sh  pool.rs  prepared_and_stream.rs  quickstart.rs  todo_cli.rs  transactions.rs
crates/core/src/: async_fn.rs  config.rs  copy.rs  error.rs  lib.rs  pool.rs  schema.rs  telemetry.rs  tls.rs  transaction.rs  types.rs
crates/core/src/auth/: md5.rs  mod.rs  scram.rs
crates/core/src/codec/: array.rs  bits.rs  chrono.rs  citext.rs  hstore.rs  interval.rs  json.rs  macaddr.rs  mod.rs  multirange.rs  net.rs  nullable.rs  numeric.rs  pgvector.rs  postgis.rs  primitive.rs  proptests.rs  range.rs  text_search.rs  time.rs  tuple.rs  uuid.rs
crates/core/src/migration/: checksum.rs  error.rs  filename.rs  mod.rs  model.rs  plan.rs  runner.rs  source.rs  table.rs
crates/core/src/protocol/: backend.rs  codec.rs  frontend.rs  mod.rs
crates/core/src/query/: fragment.rs  mod.rs
crates/core/src/session/: cache.rs  driver.rs  mod.rs  prepared.rs  startup.rs  stream.rs  type_registry.rs
crates/core/tests/: connect.rs  copy.rs  derive_codec_ui.rs  extended.rs  external_schema_export.rs  loom_driver.rs  m5_codecs.rs  migration_runner.rs  pool.rs  prepared.rs  sql_macro.rs  sql_macro_ui.rs  streaming.rs  tls.rs  tracing.rs  transactions.rs  typed_macro_ui.rs  typed_query_ui.rs
crates/core/tests/common/: mod.rs
crates/core/tests/external_schema_export/: Cargo.toml
crates/core/tests/external_schema_export/src/: lib.rs
crates/core/tests/ui/derive/fail/: ambiguous.rs  ambiguous.stderr  generic.rs  generic.stderr  missing_attr.rs  missing_attr.stderr  tuple_struct.rs  tuple_struct.stderr  wrong_type.rs  wrong_type.stderr
crates/core/tests/ui/derive/pass/: basic.rs  inferred.rs  mixed_override.rs
crates/core/tests/ui/sql/fail/: duplicate_binding.rs  duplicate_binding.stderr  missing_binding.rs  missing_binding.stderr  unused_binding.rs  unused_binding.stderr  verify_invalid_config.rs  verify_invalid_config.stderr  verify_live_mismatch.rs  verify_live_mismatch.stderr
crates/core/tests/ui/sql/pass/: basic.rs  verify_live_ok.rs  verify_skip_unsupported.rs
crates/core/tests/ui/typed_macro/fail/: legacy_command_syntax.rs  legacy_command_syntax.stderr  legacy_query_syntax.rs  legacy_query_syntax.stderr  struct_shape_ambiguous_row_names.rs  struct_shape_ambiguous_row_names.stderr  struct_shape_extra_params.rs  struct_shape_extra_params.stderr  struct_shape_extra_row.rs  struct_shape_extra_row.stderr  struct_shape_missing_params.rs  struct_shape_missing_params.stderr  struct_shape_missing_row.rs  struct_shape_missing_row.stderr  struct_shape_missing_row_rust_1_88.stderr  struct_shape_selection_precedence.rs  struct_shape_selection_precedence.stderr  struct_shape_type_mismatch_params.rs  struct_shape_type_mismatch_params.stderr  struct_shape_type_mismatch_row.rs  struct_shape_type_mismatch_row.stderr  typed_query_alias_removed.rs  typed_query_alias_removed.stderr  typed_query_alias_removed_rust_1_88.stderr  unsupported_codec.rs  unsupported_codec.stderr  verify_invalid_config.rs  verify_invalid_config.stderr  verify_live_param_mismatch.rs  verify_live_param_mismatch.stderr  verify_live_row_mismatch.rs  verify_live_row_mismatch.stderr
crates/core/tests/ui/typed_macro/pass/: basic.rs  struct_shape_selection.rs  verify_live_ok.rs
crates/core/tests/ui/typed_query/fail/: ambiguous_optional_ownership.rs  ambiguous_optional_ownership.stderr  authored_unknown_column.rs  authored_unknown_column.stderr  authored_unknown_table.rs  authored_unknown_table.stderr  authored_unsupported_declared_type.rs  authored_unsupported_declared_type.stderr  authored_unsupported_marker.rs  authored_unsupported_marker.stderr  delete_using.rs  delete_using.stderr  delete_without_where.rs  delete_without_where.stderr  insert_on_conflict.rs  insert_on_conflict.stderr  insert_select.rs  insert_select.stderr  invalid_optional_limit_group.rs  invalid_optional_limit_group.stderr  invalid_optional_projection.rs  invalid_optional_projection.stderr  mixed_inline_external.rs  mixed_inline_external.stderr  multi_statement.rs  multi_statement.stderr  multi_statement_rust_1_88.stderr  returning_wildcard.rs  returning_wildcard.stderr  schema_scoped_aliases_removed.stderr  schema_scoped_aliases_removed_rust_1_88.rs  schema_scoped_aliases_removed_rust_1_88.stderr  schema_scoped_struct_shape_ambiguous_row_names.rs  schema_scoped_struct_shape_ambiguous_row_names.stderr  schema_scoped_struct_shape_selection_precedence.rs  schema_scoped_struct_shape_selection_precedence.stderr  schema_scoped_struct_shape_selection_precedence_rust_1_88.stderr  unknown_column.rs  unknown_column.stderr  unsupported_type.rs  (+8 more)
crates/core/tests/ui/typed_query/pass/: authored_schema_qualified.rs  authored_schema_same_table_names.rs  authored_timestamptz.rs  basic.rs  insert_command.rs  schema_scoped.rs  schema_scoped_command.rs  schema_scoped_struct_alias_match.rs  schema_scoped_struct_shape_selection.rs  update_returning.rs  verify_live_ok.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs  schema_decl.rs  verify.rs
crates/macros/src/typed_sql/: ir.rs  lower.rs  mod.rs  normalize.rs  parse_backend.rs  public_input.rs  public_schema.rs  resolver.rs  source.rs
crates/macros/tests/typed_query/corpus/babar-real/parse-ok-supported/: basic_select.expected  basic_select.sql  join_alias.expected  join_alias.sql  optional_suffixes.expected  optional_suffixes.sql
crates/macros/tests/typed_query/corpus/pg-parse/syntax-error/: missing_from_target.error  missing_from_target.sql
(+104 files in other folders)
