[workspace]
resolver = "2"
members = [
    "benches/pool-throughput",
    "benches/prepared-throughput",
    "crates/core",
    "crates/macros",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/notthatbreezy/babar"
readme = "README.md"
keywords = ["postgres", "postgresql", "database", "tokio", "async"]
categories = ["database"]

[workspace.dependencies]
babar-macros = { version = "0.1.0", path = "crates/macros" }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }

tokio = { version = "1.36", default-features = false }
tokio-util = { version = "0.7", default-features = false }
bytes = "1.5"
postgres-protocol = "0.6"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false }
thiserror = "1"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
hmac = "0.12"
sha2 = "0.10"
md-5 = "0.10"
base64 = "0.21"
stringprep = "0.1"
rand = "0.8"
serde = "1"
serde_json = "1"
uuid = "1"
geo-types = "0.7"
time = "0.3"
chrono = "0.4"
rust_decimal = "1"
fallible-iterator = "0.2"
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls-native-certs = "0.8"
native-tls = "0.2"
tokio-native-tls = "0.3"

# Dev / test
proptest = "1"
hex = "0.4"
hex-literal = "0.4"
loom = "0.7"
testcontainers = "0.15"
criterion = "0.5"
tokio-postgres = "0.7"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls"] }
tracing-test = "0.2"
clap = { version = "4.5", features = ["derive", "env"] }
axum = "0.7"

[profile.release]
lto = "thin"
codegen-units = 1
debug = "line-tables-only"

[profile.bench]
debug = true
