[package]
name = "prepared-throughput-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
babar = { path = "../../crates/core" }
criterion = { workspace = true, features = ["async_tokio"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tokio-postgres = { workspace = true }

[[bench]]
name = "prepared_throughput"
harness = false

[lints.rust]
unsafe_code = "forbid"
