[package]
name = "babar"
description = "Typed, async PostgreSQL driver for Tokio that speaks the wire protocol directly."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
# Optional dial9-tokio-telemetry instrumentation in examples. Enable with
# `cargo run --example playground --features dial9`. Feature lives on the
# crate (rather than as a dev-dependency) so opting in is explicit and
# the default build never pulls in the dial9 tree.
dial9 = ["dep:dial9-tokio-telemetry"]

[dependencies]
babar-macros = { workspace = true }
tokio = { workspace = true, features = ["net", "rt", "sync", "io-util", "macros", "time"] }
dial9-tokio-telemetry = { workspace = true, optional = true }
tokio-util = { workspace = true, features = ["codec"] }
bytes = { workspace = true }
postgres-protocol = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
tracing = { workspace = true }

# Auth deps
hmac = { workspace = true }
sha2 = { workspace = true }
md-5 = { workspace = true }
base64 = { workspace = true }
stringprep = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
proptest = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
rand = { workspace = true }
futures-util = { workspace = true, features = ["std"] }
trybuild = "1"

[target.'cfg(loom)'.dev-dependencies]
loom = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(loom)"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
missing_panics_doc = "allow"
