[package]
name = "babar-macros"
description = "Procedural macros for the babar PostgreSQL driver."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
