[package]
name = "babar-macros"
description = "Procedural macros for the babar PostgreSQL driver."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
postgres = "0.19"
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
sqlparser = "0.61"

[lints.rust]
unsafe_code = "forbid"
